audit/kube/calico-apiserver/networkpolicies.json
{
    "apiVersion": "v1",
    "items": [
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "creationTimestamp": "2025-12-18T18:28:17Z",
                "generation": 1,
                "name": "allow-apiserver",
                "namespace": "calico-apiserver",
                "ownerReferences": [
                    {
                        "apiVersion": "operator.tigera.io/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "APIServer",
                        "name": "default",
                        "uid": "941036cf-a051-4497-9c6f-142c0a671607"
                    }
                ],
                "resourceVersion": "849",
                "uid": "4c3bb148-dfa8-448f-a06f-85c7444c4578"
            },
            "spec": {
                "ingress": [
                    {
                        "ports": [
                            {
                                "port": 5443,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "apiserver": "true"
                    }
                },
                "policyTypes": [
                    "Ingress"
                ]
            }
        }
    ],
    "kind": "List",
    "metadata": {
        "resourceVersion": ""
    }
}
